# code_dump

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.079d084  Cargo.toml  LICENSE  Service.cpp  application.cpp  application.h  color.h  event.h  imageprovider.cpp  imageprovider.h  links.txt  main.c  main.cc  main.cpp  matrix.cpp  matrix.h  meson.build  msvc-x86.toolchain  package.appxmanifest  package.appxmanifest.in  qimageserialization.pro  qml.qrc  setup.txt  vertex.cpp  vertex.h  window.cpp  window.h
Course1/: CMakeLists.txt
Course1/src/: main.cc
Course10/: CMakeLists.txt
Course10/src/: CMakeLists.txt  application.cc  program.cc  shader.cc
Course10/src/include/: mesh.hh  program.hh  shader.hh
Course2/: CMakeLists.txt
Course2/src/: CMakeLists.txt  main.cc
Course3/: CMakeLists.txt
Course3/fuzz_test/: CMakeLists.txt
Course3/src/: main.cc
Course4/: CMakeLists.txt
Course4/src/: main.cc
Course5/: CMakeLists.txt
Course6/: CMakeLists.txt
Course7/: CMakeLists.txt
Course8/: CMakeLists.txt
Course9/: CMakeLists.txt
cccl1/: CMakeLists.txt  level1-eg.txt  main.cpp
cccl2/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  Doxygen.cmake  IPO.cmake  Sanitizers.cmake  ShaderCompiler.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  i386-watcom-dos4gw.cmake  i586-pc-msdosdjgpp.cmake  mcs51.cmake  sdcc_cxx.cmake  wayland.cmake
cpplib/: CMakeLists.txt  test.cpp
docs/: cheatsheet
include/: color.h  gulp_application.h  gulp_global.h  gulp_layout.h  gulp_window.h  logger.h  sound.h  utility.h  vga.h
meson/: CMakeLists.txt
qml/: test.qml
src/: CMakeLists.txt  application.cc  application.cpp  cartridge.cc  concord.cc  concord_cursor.cc  concord_keyboard.cc  concord_output.cc  concord_output_layout.cc  concord_renderer.cc  concord_seat.cc  concord_server.cc  concord_surface.cc  concord_view.cc  cpu6502.cc  data_bus.cc  device.cc  device.cpp  gulp_application.cpp  gulp_platform.cpp  gulp_platform_loader.cpp  gulp_window.cpp  main.c  main.cc  main.cpp  meson.build  nes_system.cc  physical_device.cpp  ppu2c02.cc  queue.cpp  ram.cc  renderer.cc  test.c  triangle_app.cpp  vga.cpp  voot_application.cc  voot_binding.cc  voot_item.cc  voot_lifeline.cc  voot_logger.cc  (+7 more)
src/2c02/: ppu2c02.cc
src/2c02/include/: name_table.hh  palette_table.hh  ppu2c02.hh
src/6502/: cpu6502.cc
src/6502/include/: address_modes.hh  cpu6502.hh  instruction.hh  instruction_set.hh  register.hh
src/cartridge/: cartridge.cc  mapper_000.cc  pattern_table.cc
src/cartridge/include/: cartridge.hh  mapper_000.hh  pattern_table.hh
src/compositor/: CMakeLists.txt  compositor.cmake  meson.build
src/compositor/include/: bindings.h  cursor.h  desktop.h  harbor_compositor.hh  input.h  keyboard.h  seat.h  server.h  switch.h
src/compositor/src/: bindings.c  config.c  cursor.c  desktop.c  harbor_compositor.cc  harbor_window_manager.cc  input.c  keyboard.c  layer_shell.c  main.c  output.c  seat.c  switch.c  test.cc  text_input.c  wl_shell.c  xdg_shell.c  xdg_shell_v6.c  xwayland.c
src/compositor/src/include/: harbor_window_manager.hh
src/include/: address_modes.hh  application.h  application.hh  application_loop.hh  cartridge.hh  color.hh  concord.hh  concord_cursor.hh  concord_global.hh  concord_keyboard.hh  concord_output.hh  concord_output_layout.hh  concord_renderer.hh  concord_seat.hh  concord_server.hh  concord_signal.hh  concord_surface.hh  concord_view.hh  concord_wayland_signal.hh  concurrent_queue.hh  constants.hh  cpu6502.hh  data_bus.hh  device.h  device.hh  dummy.h  event.hh  event_loop.hh  file.hh  fps.hh  global.h  gulp_application_p.h  gulp_platform_loader_p.h  gulp_platform_p.h  gulp_platform_window_p.h  gulp_window_p.h  input.hh  instruction.hh  instruction_set.hh  logger.h  (+50 more)
src/include/core/: voot_application.hh  voot_binding.hh  voot_lifeline.hh  voot_logger.hh  voot_logger.inl  voot_property.hh  voot_signal.hh
src/include/events/: voot_event.hh  voot_key_events.hh  voot_mouse_events.hh  voot_render_event.hh  voot_window_events.hh
src/include/gui/: voot_item.hh  voot_rectangle.hh  voot_window.hh
src/panel/: CMakeLists.txt  meson.build  panel.cmake
src/panel/include/: harbor_panel.hh
src/panel/src/: harbor_panel.cc  harbor_panel_old.cc  xdg-shell-unstable-v6-protocol.cc
src/platform/: CMakeLists.txt
src/platform/gtk/: CMakeLists.txt  gulp_gtk_platform.cpp  gulp_gtk_platform.h  gulp_gtk_window.cpp  gulp_gtk_window.h
src/private/: voot_graphics_context.hh  voot_graphics_context_opengl.cc
src/rml/: test.rml
src/utilities/: CMakeLists.txt  meson.build  utilities.cmake
src/utilities/include/: harbor_egl_config.hh  harbor_egl_display.hh  harbor_egl_surface.hh  harbor_logger.hh  harbor_signal.hh  harbor_utilities.hh  harbor_xdg_surface.hh
src/utilities/include/egl/: harbor_egl_config.hh  harbor_egl_context.hh  harbor_egl_display.hh  harbor_egl_surface.hh  harbor_egl_types.hh
src/utilities/include/wayland/: harbor_wl_registry.hh
src/utilities/include/xdg/: harbor_xdg_surface.hh
src/utilities/src/: harbor_egl_config.cc  harbor_utilities.cc
src/utilities/src/include/: harbor_egl_config_private.hh  harbor_egl_surface_private.hh
src/wayland-protocols/: CMakeLists.txt  meson.build  wayland-protocols.cmake
src/wayland-protocols/xdg-shell-unstable/: CMakeLists.txt  meson.build  xdg-shell-unstable.cmake
subprojects/: CMakeLists.txt  meson.build
subprojects/freetype2/: CMakeLists.txt
subprojects/glesv2/: CMakeLists.txt
subprojects/libinput/: CMakeLists.txt
subprojects/mir/: CMakeLists.txt
subprojects/nanovg/: CMakeLists.txt  meson.build
subprojects/pixman-1/: CMakeLists.txt
subprojects/wayland-server/: CMakeLists.txt
subprojects/wlroots/: CMakeLists.txt
subprojects/xkbcommon/: CMakeLists.txt
test/: CMakeLists.txt  test_application.cc  test_binding.cc  test_event.cc  test_item.cc  test_lifeline.cc  test_logger.cc  test_private_graphics_context.cc  test_property.cc  test_rectangle.cc  test_window.cc  tests.cc
watcom/: watcom-test.mk  watcom-test.wpj  wtst.mk1  wtst.tgt
(+424 files in other folders)
