cmake_minimum_required (VERSION 3.11)

project (3rdparty)

add_subdirectory (egl)
add_subdirectory (freetype2)
add_subdirectory (glesv2)
add_subdirectory (libinput)
add_subdirectory (nanovg)
add_subdirectory (pixman-1)
add_subdirectory (pthread)
add_subdirectory (wayland-cursor)
add_subdirectory (wayland-egl)
add_subdirectory (wayland-server)
add_subdirectory (wlroots)
add_subdirectory (xkbcommon)

